# forgespc

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/forgespc/: __init__.py  advanced.py  bayesian.py  calibration.py  capability.py  charts.py  conformal.py  constants.py  gage.py  models.py  rules.py
src/forgespc/golden/: spc_capability_cal_spc_014.json  spc_cusum_cal_spc_010.json  spc_cusum_cal_spc_011.json  spc_ewma_cal_spc_013.json  spc_p_chart_cal_spc_008.json  spc_p_chart_cal_spc_009.json  spc_xbar_s_cal_spc_007.json
tests/: test_advanced.py  test_bayesian.py  test_capability.py  test_charts.py  test_conformal.py  test_gage_extended.py  test_golden.py  test_rules.py
tests/golden/: spc_capability_cal_spc_003.json  spc_ewma_cal_spc_012.json  spc_imr_cal_spc_001.json  spc_imr_cal_spc_002.json  spc_xbar_r_cal_spc_004.json  spc_xbar_r_cal_spc_005.json  spc_xbar_s_cal_spc_006.json
