[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgespc"
version = "0.1.0"
description = "Statistical Process Control engine for manufacturing quality systems"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Eric Wolters", email = "eric.wolters@svend.ai"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
advanced = [
    "scipy>=1.10",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/ewolters/forgespc"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
